--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="last_name">Last Name</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="continue1">Continue</string>
-    <string name="forgot_password">Forgot Password</string>
+    <string name="forgot_password">Reset Password</string>
     <string name="fill_the_form_to_reset_your_password">Fill The Form To Reset Your Password</string>
     <string name="email_address">Email Address</string>
     <string name="new_password">New Password</string>
