--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="confirm_new_password">Confirm New Password</string>
     <string name="change">Change</string>
     <string name="mobile_number">Mobile Number</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="work_in_progress">Work In Progress</string>
 </resources>
