#1 Major improvements to Dashboard and related navigation functionality involving the bottom navigation bar and slight tweaks to the top bar.  -GSR

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="mobile_number">Mobile Number</string>
     <string name="dashboard">Dashboard</string>
     <string name="work_in_progress">Work In Progress</string>
+    <string name="title_activity_secondary">SecondaryActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
