Added Categories PAge. Floating action button leads to item list for now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="item_name">Item Name</string>
     <string name="inventory_item_qty">Item Qty</string>
     <string name="inventory_item_name">item Name</string>
+    <string name="categories_title">CATEGORIES</string>
 
 
 </resources>
