Can approve and request items now. Requests not pending get properly displayed in request history. request history images change depending on status.
Item list categories now change depending on category selected.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="viewPlan">View Plans</string>
     <string name="view_current_plans">View Current Plans</string>
     <string name="upload_a_new_plan">Upload A New Plan</string>
+    <string name="inventoryManagerPanelPendingReqTitle">Pending Requests</string>
 
 
     //Array to get units for inventory units spinner
