--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,18 @@
     <string name="Messages">Messages</string>
     <string name="Forums">Forums</string>
 
+
+    <!--Messaging func-->
+    <string name="message_writepad_placeholder_text">Aa</string>
+
+    <!--Forum Func-->
+    <string name="title_of_the_post_hint">Title Of The Post</string>
+    <string name="forum_description_hint">Description</string>
+    <string name="helpertext_forum">Type In The Forum Title</string>
+    <string name="descr_forum_helpertext">Type In The Description</string>
+
+
+
     <string name="amount_listadapter">Amount</string>
     <string name="expenses">Expenses</string>
     <string name="directCost">Direct Costs</string>
@@ -61,6 +73,7 @@
     <string name="upload_a_new_plan">Upload A New Plan</string>
     <string name="inventoryManagerPanelPendingReqTitle">Pending Requests</string>
     <string name="edit_inventory_delete_menu_text">Delete</string>
+
 
 
     //Array to get units for inventory units spinner
